Revised analysis based on feedback

--- a/Water usage.html
+++ b/Water usage.html
@@ -12262,6 +12262,15 @@ memory usage: 78.8+ KB
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Limitations-1:">Limitations 1:<a class="anchor-link" href="#Limitations-1:">&#182;</a></h4><p>The data set is limited; only year 2000 had 65 countries surveyed. The data did not seemed to be collected at regular intervals, and could not support analysis across the years for most countries.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Question-2:-How-much-water-has-the-United-States-been-withdrawing-per-person-throughout-the-years?">Question 2: How much water has the United States been withdrawing per person throughout the years?<a class="anchor-link" href="#Question-2:-How-much-water-has-the-United-States-been-withdrawing-per-person-throughout-the-years?">&#182;</a></h3>
 </div>
 </div>
@@ -13056,6 +13065,16 @@ Comparing the data from 2002, 2007 and 2012, the median amount of renewal water 
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Limitation-3:">Limitation 3:<a class="anchor-link" href="#Limitation-3:">&#182;</a></h4><p>This data set has much more regularity, mostly collected at 5 year interval. The number of countries surveyed per year is also consistently extensive from 155 to 181 countries.</p>
+<p>However the data collection years do not conincide with the year 2000 data in the first water withdrawal per person data set, so the 2 data sets could not be effectively compared.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Question-4:-How-many-countries-surveyed-have-water-desalination?-Which-country-has-the-highest-water-desalination-(in-billion-cubic-meters)?">Question 4: How many countries surveyed have water desalination? Which country has the highest water desalination (in billion cubic meters)?<a class="anchor-link" href="#Question-4:-How-many-countries-surveyed-have-water-desalination?-Which-country-has-the-highest-water-desalination-(in-billion-cubic-meters)?">&#182;</a></h3>
 </div>
 </div>
@@ -13608,6 +13627,15 @@ memory usage: 23.5+ KB
 <h4 id="Conclusion-4b:">Conclusion 4b:<a class="anchor-link" href="#Conclusion-4b:">&#182;</a></h4><p>World water desalination decreased from 1.88 billion cubic meters in 1990 to 1.64 billion cubic meters in 2000.</p>
 <p>In both 1990 and 2000, United States produced the largest volume of water by desalination at 0.58 billion cubic meters, ahead of United Arab Emirates. However, the United States production volume has stayed the same, while United Arab Emirates has more than doubled their production in 10 years. Kuwait, the second highest water desalination production country in 1990, has no data in 2000.</p>
 <p>Most countries with both years of data did not increase production. Only 4 countries increased production - Cyprus at 10.2%, United Arab Emirates at 1.4%, Qatar at 0.5% and Indonesia at 0.02%.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Limitation-4:">Limitation 4:<a class="anchor-link" href="#Limitation-4:">&#182;</a></h4><p>This data set is limited, with the most number of countries surveyed in years 1990 and 2000. This became the focus of my analysis. However, some countries are surveyed in only 1 of these 2 years, noticeably Kuwait, which had the second highest water desalination in 1990, but was not surveyed in 2000.</p>
 
 </div>
 </div>
